[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
libp2p = {version = "0.51.2", features = ["full"]}
tokio = { version = "1.26.0", features = ["full"]}