[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.51.2", features = ["full"] }
tokio = {version = "1.26.0", features = ["full"]}
futures = "0.3.25"
sha3 = "0.10.6"
anyhow = "1.0.69"
thiserror = "1.0.39"